Jann 30/objects/GS1_Multipack_Value__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multipack__c</fullName>
        <label>Multipack</label>
        <referenceTo>GS1_Multipack__c</referenceTo>
        <relationshipLabel>Values</relationshipLabel>
        <relationshipName>Multipack_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <formula>Multipack__r.Code__c + &apos;~&apos; +  Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueKey</label>
        <type>Text</type>
    </fields>
    <label>GS1 Multipack Value</label>
    <nameField>
        <label>Multipack Value</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I90000001EiecEAC_00N90000006wkF6EAI</fullName>
        <active>true</active>
        <field>GS1_Request__c.Units_Pack__c</field>
        <filterItems>
            <field>GS1_Multipack_Value__c.Multipack__c</field>
            <operation>equals</operation>
            <valueField>$Source.Multipack__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Product_Units/Pack</name>
        <sourceObject>GS1_Request__c</sourceObject>
    </namedFilters>
    <pluralLabel>GS1 Multipack Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>GS1_MultiPack_ValueMustBeNumeric</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNUMBER(Name))</errorConditionFormula>
        <errorMessage>Value must be numeric</errorMessage>
    </validationRules>
</CustomObject>